--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+        <h1>Login Form</h1>
+        <form id="loginForm">
+            <div class="form-group">
+                <input type="text" id="username" placeholder="Username" required>
+            </div>
+            <div class="form-group">
+                <input type="password" id="password" placeholder="Password" required>
+            </div>
+            <label for="checkbox">
+                <input type="checkbox" id="checkbox">
+                Remember me.
+            </label>
+            <input type="submit" id="submit" value="Submit">
+        </form>
+        <button id="existing">Login as existing user</button>
+    </div>
+    <script src="script.js"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
